k8s/http-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartem-http-api-service
  namespace: smartem-decisions
  labels:
    app: smartem-http-api
spec:
  selector:
    app: smartem-http-api
  ports:
  - name: http
    port: 80
    targetPort: 8000
    nodePort: 30080
    protocol: TCP
  type: NodePort
